--- a/components/nav.html
+++ b/components/nav.html
@@ -9,5 +9,8 @@
     <li>
       <a href="../pages/mousemove-light.html">mousemove light</a>
     </li>
+    <li>
+      <a href="../pages/mousemove-light-sum.html">mousemove light sum</a>
+    </li>
   </ul>
 </nav>
