--- a/components/nav.html
+++ b/components/nav.html
@@ -10,6 +10,9 @@
       <a href="../pages/mousemove-light.html">mousemove light</a>
     </li>
     <li>
+      <a href="../pages/sun-rise.html">sun rise</a>
+    </li>
+    <li>
       <a href="../pages/mousemove-light-sum.html">mousemove light sum</a>
     </li>
   </ul>
