--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1,7 +1,15 @@
 @import url(./reset.css);
 
+@font-face {
+  font-family: "D2Coding";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_three@1.0/D2Coding.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
-  font-size: 0;
+  font-family: D2Coding, sans-serif;
 }
 
 #color {
@@ -27,6 +35,9 @@ body {
   font-size: 20px;
   color: #fff;
   text-decoration: none;
+}
+.nav li.yet a {
+  color: #666;
 }
 
 header {
