--- a/components/nav.html
+++ b/components/nav.html
@@ -3,17 +3,20 @@
     <li>
       <a href="../pages/color-pick.html">color pick</a>
     </li>
-    <li>
+    <li class="yet">
       <a href="../pages/image-color.html">image color</a>
     </li>
     <li>
       <a href="../pages/mousemove-light.html">mousemove light</a>
     </li>
-    <li>
+    <li class="yet">
       <a href="../pages/sun-rise.html">sun rise</a>
     </li>
-    <li>
+    <li class="yet">
       <a href="../pages/mousemove-light-sum.html">mousemove light sum</a>
+    </li>
+    <li>
+      <a href="../pages/danso-run.html">danso run</a>
     </li>
   </ul>
 </nav>
